# vcpkg-basic

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
